--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "files.associations": {
-        "libft.h": "c"
-    }
+  "files.associations": {
+    "libft.h": "c",
+    "initializer_list": "c",
+    "type_traits": "c",
+    "utility": "c"
+  }
 }
